    - drm/vc4: Reset ->{x, y}_scaling[1] when dealing with uniplanar formats
    - scsi: sg: fix minor memory leak in error path

  [ Salvatore Bonaccorso ]
  * [rt] Update to 4.9.115-rt93
  * [rt] Drop 0145-stop_machine-Use-raw-spinlocks.patch patch
  * [rt] Drop 0144-stop_machine-convert-stop_machine_run-to-PREEMPT_RT.patch
    patch

 -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 05 Aug 2018 16:29:03 +0200

linux (4.9.110-3+deb9u4) stretch-security; urgency=high

  * init: rename and re-order boot_cpu_state_init()
    Adresses boot failures on arm* systems. (Closes: #906769)
  * Sync "cpu/hotplug: Boot HT siblings at least once" from 4.9.120
  * Sync "cpu/hotplug: Non-SMP machines do not make use of booted_once" from
    4.9.120
  * Refresh features/all/rt/0157-softirq-Split-softirq-locks.patch patch.
    Adjust context after applying "init: rename and re-order
    boot_cpu_state_init()".

 -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 21 Aug 2018 16:50:09 +0200

linux (4.9.110-3+deb9u3) stretch-security; urgency=high

  [ Salvatore Bonaccorso ]
  * Add L1 Terminal Fault fixes (CVE-2018-3620, CVE-2018-3646)
    - [x86] speculation/l1tf: Increase 32bit PAE __PHYSICAL_PAGE_SHIFT
    - [x86] mm: move _PAGE_SWP_SOFT_DIRTY from bit 7 to bit 1
    - [x86] speculation/l1tf: Change order of offset/type in swap entry
    - [x86] speculation/l1tf: Protect swap entries against L1TF
    - [x86] speculation/l1tf: Protect PROT_NONE PTEs against speculation
    - [x86] speculation/l1tf: Make sure the first page is always reserved
    - [x86] speculation/l1tf: Add sysfs reporting for l1tf
    - [x86] speculation/l1tf: Disallow non privileged high MMIO PROT_NONE
      mappings
    - [x86] speculation/l1tf: Limit swap file size to MAX_PA/2
    - [x86] bugs: Move the l1tf function and define pr_fmt properly
    - [x86] smp: Provide topology_is_primary_thread()
    - [x86] topology: Provide topology_smt_supported()