@@ -228,9 +228,9 @@ diff --git a/kernel/sched/swait.c b/kernel/sched/swait.c
 index e2e224c59c0a..ef027ff3250a 100644
 --- a/kernel/sched/swait.c
 +++ b/kernel/sched/swait.c
-@@ -74,6 +74,7 @@ void swake_up_all(struct swait_queue_head *q)
- 	if (!swait_active(q))
- 		return;
+@@ -68,6 +68,7 @@
+ 	struct swait_queue *curr;
+ 	LIST_HEAD(tmp);
  
 +	WARN_ON(irqs_disabled());
  	raw_spin_lock_irq(&q->lock);
