@@ -464,6 +464,8 @@ linux (4.9.118-1) UNRELEASED; urgency=medium
   * [rt] Drop 0145-stop_machine-Use-raw-spinlocks.patch patch
   * [rt] Drop 0144-stop_machine-convert-stop_machine_run-to-PREEMPT_RT.patch
     patch
+  * [rt] Refresh 0225-fs-dcache-use-swait_queue-instead-of-waitqueue.patch
+    patch
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 05 Aug 2018 16:29:03 +0200
 
